feat: Обновление блокчейн-приложения и клиентского интерфейса
- В `blockchain/main.go`:
  - Удалён тестовый код регистрации публичного ключа и создания транзакции.
  - Добавлен импорт `manager` для управления консенсусом.
  - Раскомментирован и исправлен код `ConsensusSwitcher` с запуском консенсуса по таймеру.
  - Убраны закомментированные участки кода.

- В `client-send-transaction/index.html`:
  - Изменены значения полей "От кого" и "Кому" по умолчанию на "Name 1" и "Name 2" соответственно.

- Переименован файл `sendtx.go` в `main.go` в директории `client-send-transaction`.

- Убран вывод URL для отправки транзакции в `main.go` клиента.

--- a/client-send-transaction/index.html
+++ b/client-send-transaction/index.html
@@ -167,11 +167,11 @@
       <form id="txForm">
         <div>
           <label>От кого:</label>
-          <input type="text" name="From" value="A" required>
+          <input type="text" name="From" value="Name 1" required>
         </div>
         <div>
           <label>Кому:</label>
-          <input type="text" name="To" value="validator2" required>
+          <input type="text" name="To" value="Name 2" required>
         </div>
         <div>
           <label>Сумма:</label>
